--- a/myblog/templates/blog/about.html
+++ b/myblog/templates/blog/about.html
@@ -5,7 +5,7 @@
   .Offscreen {background: #8c39ff;}
 </style>
 <section class="page-name">
-  <h1> { ABOUT }</h1>
+  <h1> { ABOUT ME }</h1>
 </section>
 <main class="mdl-grid">
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -26,29 +26,78 @@
       </div>
     </div>
     <div class="contact-box mdl-grid">
-      <div class="mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--8-col-phone">
-        <h3>Site</h3>
-        <p><a href="https://github.com/sujinleeme/official-website">GitHub</a></p>
-        <h3>CV</h3>
-        <p><a href="https://www.linkedin.com/in/leesujin">LinkedIn</a></p>
-        <h3>Contact</h3>
-        <p><a href="mailto:sujinlee.me@gmail.com?Subject=Hello%20Sujin" target="_top">sujinlee.me@gmail.com</a></p>
+      <div class="mdl-cell--12-col ">
+        <h1>SUJIN <mark>LEE</mark></h1>
+        <h2><mark>A creative web developer</mark> who has a blended art and programming brain.</h2>
+       
+    
+		
       </div>
     </div>
   </div>
+  
   <div class="about-box mdl-cell mdl-cell--5-col mdl-cell--5-col-tablet mdl-cell--8-col-phone">
-    <h3>BIO</h3>
     <p>Hello, World! I am Sujin Lee from Seoul, Korea.<br>I write code. I play music.</p>
-    <p>After completing my undergraduate studies in Music Composition & Education at Sookmyung Women’s University, I have pursued my passions of music and programming with equal vigor, aiming to make creative work that inspires. I want to use programming to unlock the secret of music masterpiece in the nearest future. I had learned classical music since I was young, but I have been born again as python and web developer.</p>
+    <p>After completing my undergraduate studies in Music Composition & Education, I have pursued my passions of music and programming with equal vigor, aiming to make creative work that inspires. I want to use programming to unlock the secret of music masterpiece in the nearest future. I had learned classical music since I was young, but I have been born again as python and web developer.</p>
     <p>I am currently working in CONNECT foundation, which was established by Naver Corp. to provide software engineering education to young Koreans.</p>
     <p>While I enjoy all aspects of my job, I run Django Girl Seoul Community with friends to encourage women to jump into technology lately and we manage workshops about programming in Python and Django.</p>
     <p>If you want to say hello, I'm mostly on <a href="https://twitter.com/sujinleeme">twitter</a> or <a href="https://www.facebook.com/sujiniworld">facebook</a>. I always love hearing about you and new projects.</p>
   </div>
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+  
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-  <div class="made-box mdl-cell mdl-cell--8-col">
-  <p>Design & Code by <strong>Sujin Lee</strong> <i class="fa fa-heart"></i> Made with <a href="https://www.djangoproject.com/">django</a> & <a href="https://www.google.com/design/spec/material-design/introduction.html">Google Material Design</a>
-  <p>
+  
+  <!--<section class="skill-box mdl-cell mdl-cell--8-col">
+    Tools I Use
+    <div class="dev-icons">
+    <ul>
+        <li><span>python3</span></li>
+        <li><span>django</span></li>
+        <li><span>html5</span></li>
+        <li><span>css3</span></li>
+        <li><span>jquery</span></li>
+    </ul>
+    </div>
+  </section>-->
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+
+<div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+
+<section class="page-name">
+  <h1> What I use </h1>
+</section>
+<div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+  <section class="skill-box mdl-cell mdl-cell--8-col">
+  
+    <div class="dev-icons">
+    <ul>
+        <li><span>python3</span></li>
+        <li><span>django</span></li>
+        <li><span>html5</span></li>
+        <li><span>css3</span></li>
+        <li><span>jquery</span></li>
+    </ul>
+    </div>
+  </section>
+  <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+
+
+<section class="page-name">
+  <h1> Get in touch </h1>
+</section>
+<div class="btn-container">
+<div class="contact-button" rippleria>
+      <a href="mailto:sujinlee.me@gmail.com?Subject=Hello%20Sujin">
+      <button class="btn-material"><span>Send to Mail</span></button></a>
+    </div>
+    <div class="contact-button" rippleria>
+      <a href="https://goo.gl/iGCxmJ" class="newtab">
+      <button class="btn-material download"><span>Download Resume</span></button></a>
+    </div>
+
+</section>
+
+
+  
 </main>
 {% endblock content %}
