--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -15,6 +15,7 @@
     <link href="//fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel='stylesheet' type='text/css'>
     <link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+    <link href='//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css' rel='stylesheet'>
     <link href="{% static 'css/mdl-grid.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="{% static 'css/text.css' %}" rel="stylesheet">
@@ -38,12 +39,13 @@
         <div class="title"><a href="/">
           <i class="fa fa-connectdevelop" aria-hidden="true"></i></a>
         </div>
-        <div class="menu-section">
-          <div class="menu-toggle">
+        <div class="menu-toggle">
             <div class="one"></div>
             <div class="two"></div>
             <div class="three"></div>
           </div>
+        <div class="menu-section">
+          
           <nav>
             <ul role="navigation" class="hidden">
               <li><a class="" href="/" >HOME</a></li>
