--- a/myblog/templates/blog/post_list.html
+++ b/myblog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
 <title>BLOG | Sujin Lee</title>
 <section class="page-name">
   <h1>{ BLOG }</h1>
-  <p>/* Now is better than Never */</p>
+  <h2>/* Now is better than Never */</h2>
 </section>
 <div class="card-warpper">
   <div class="mdl-grid">
