--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -14,7 +14,7 @@
 {% block content %}
 <section class="page-name">
   <h1>{ PROJECT }</h1>
-  <p>/* Web & Music */</p>
+  <h2>/* Web & Music */</h2>
 </section>
 <article class="mdl-grid">
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -104,7 +104,7 @@
     {% endif %}
   </div>
 </nav>
-<div class="go-top"><i class="fa fa-angle-up"></i></div>
+<div class="go-top">/div>
 <script>
   // facebook share
   function fbshare() {
