--- a/myblog/templates/blog/about.html
+++ b/myblog/templates/blog/about.html
@@ -47,7 +47,7 @@
     <h1> What I use </h1>
   </section>
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-  <section class="skill-box mdl-cell mdl-cell--8-col">
+  <section class="mdl-cell mdl-cell--8-col">
     <div class="dev-icons">
       <ul>
         <li><span>python3</span></li>
@@ -68,7 +68,7 @@
     <button class="btn-material"><span>Send to Mail</span></button></a>
   </div>
   <div class="contact-button" rippleria>
-    <a href="https://goo.gl/iGCxmJ" class="newtab">
+    <a href="https://goo.gl/rWrVOu" class="newtab">
     <button class="btn-material download"><span>Download Resume</span></button></a>
   </div>
   </section>
