--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -104,7 +104,7 @@
     {% endif %}
   </div>
 </nav>
-<div class="go-top">/div>
+<div class="go-top"></div>
 <script>
   // facebook share
   function fbshare() {
