--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -8,8 +8,8 @@
 <meta property="og:type" content="Sujin Lee:Post" />
 <meta property="og:title" content="{{ post.title }}" />
 <meta property="og:description" content="{{ post.summary|truncatechars:230 }}" />
-<meta property="og:image"content="http://sujinlee.me/{{ post.image.url }}" />
-<meta property="og:url" content="http://sujinlee.me/blog/{{post.slug }}/" />
+<meta property="og:image" content="http://www.sujinlee.me/{{ post.image.url }}" />
+<meta property="og:url" content="http://www.sujinlee.me/blog/{{post.slug }}/" />
 {% endblock %}
 {% block content %}
 <section class="page-name">
@@ -59,16 +59,16 @@
           <i class="fa fa-share-alt"></i>
           <div class="container">
             <a class="facebook share-btn customer share"
-              href = "http://www.facebook.com/share.php?u=http://sujinlee.me/blog/{{ post.slug }}"
+              href = "http://www.facebook.com/share.php?u=http://www.sujinlee.me/blog/{{ post.slug }}"
               target="_blank" onclick="return fbshare()">
             <i class="fa fa-facebook"></i></a>
             <a class="twitter share-btn customer share"
-              href="http://twitter.com/share?url=http://sujinlee.me/blog/{{ post.slug }}
-              &amp;text={{ post.title }} http://sujinlee.me/blog/{{ post.slug }} via @sujinleeme &amp;hashtags={{ post.category.title }}"
+              href="http://twitter.com/share?url=http://www.sujinlee.me/blog/{{ post.slug }}
+              &amp;text={{ post.title }} http://www.sujinlee.me/blog/{{ post.slug }} via @sujinleeme &amp;hashtags={{ post.category.title }}"
               target="_blank" title="Twitter Share">
             <i class="fa fa-twitter"></i></a>
             <a class="google_plus share-btn customer share"
-              href="https://plus.google.com/share?url=http://sujinlee.me/blog/{{ post.slug }}"
+              href="https://plus.google.com/share?url=http://www.sujinlee.me/blog/{{ post.slug }}"
               target="_blank" title="Google Plus Share">
             <i class="fa fa-google-plus"></i></a>
           </div>
