--- a/myrun/templates/marathon/event_list.html
+++ b/myrun/templates/marathon/event_list.html
@@ -22,6 +22,7 @@
     <script src="//code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
     <script src="//apis.daum.net/maps/maps3.js?apikey=317394cebdea4b6359a849bcf994be38" rel="stylesheet" type="text/javascript"></script>
     <script src="//cdn.rawgit.com/zenorocha/clipboard.js/master/dist/clipboard.min.js" rel="stylesheet" type="text/javascript"></script>
+    <script src="//apis.daum.net/maps/maps3.js?apikey=317394cebdea4b6359a849bcf994be38"  type="text/javascript"></script>
     <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript" ></script>
     <script src="{% static 'js/myrun.js' %}" rel="stylesheet" type="text/javascript"></script>
     <script src="{% static 'js/prefixfree.min.js' %}" rel="stylesheet" type="text/javascript"></script>
@@ -189,7 +190,7 @@
             </table>
           </div>
           <div class="tbl-content tbl_scroll" id="mobile_scroll">
-            <table id="event" class="evevent_title_past">
+            <table id="event" class="event_title_past">
               <tbody>
                 {% for event in past_events %}
                 <tr>
@@ -221,8 +222,8 @@
     <section class="section">
       <article class="section__map">
         <div id="map" style="width:100%;height:140vh;"></div>
-        <script src="//apis.daum.net/maps/maps3.js?apikey=317394cebdea4b6359a849bcf994be38"  type="text/javascript"></script>
         <script>
+
           //create daum map API
           var mapContainer = document.getElementById('map'), 
             mapOption = { 
@@ -264,6 +265,11 @@
           });
         </script>
         {% endfor %}
+        <script>
+          var imageSrc = '{% static 'image/map/map-marker-gray.svg' %}', 
+              imageSize = new daum.maps.Size(30, 30),
+              imageOprion = {offset: new daum.maps.Point(27, 69)}; 
+        </script>
         {% for event in past_events %}
         <script>
           // daum map
@@ -293,42 +299,7 @@
           });
         </script>
         {% endfor %}
-        <script>
-          var imageSrc = '{% static 'image/map/map-marker-gray.svg' %}', 
-              imageSize = new daum.maps.Size(30, 30),
-              imageOprion = {offset: new daum.maps.Point(27, 69)}; 
-        </script>
-        {% for event in past_events %}
-        <script>
-          var markerImage = new daum.maps.MarkerImage(imageSrc, imageSize, imageOprion),
-              markerPosition = new daum.maps.LatLng({{ event.latitude }}, {{ event.longitude }}); 
-          
-          var marker = new daum.maps.Marker({
-            position: markerPosition,
-            image: markerImage 
-          
-          marker.setMap(map);  
-          
-          
-          var content = '<div class="customoverlay customoverlay--past">' +
-              '  <a href="{{ event.website }}" target="_blank">' +
-              '    <span class="title">{{ event.title }}</span>' +
-              '  </a>' +
-              '</div>';
-          
-          
-          
-          var position = new daum.maps.LatLng({{ event.latitude }}, {{ event.longitude }});  
-          
-          
-          var customOverlay = new daum.maps.CustomOverlay({
-              map: map,
-              position: position,
-              content: content,
-              yAnchor: 1 
-          });
-        </script>
-        {% endfor %}
+    
       </article>
     </section>
     <section class="section notranslate">
