--- a/myblog/templates/blog/about.html
+++ b/myblog/templates/blog/about.html
@@ -54,7 +54,9 @@
         <li><span>django</span></li>
         <li><span>html5</span></li>
         <li><span>css3</span></li>
+        <li><span>javascript</span></li>
         <li><span>jquery</span></li>
+        <li><span>gulp</span></li>
       </ul>
     </div>
   </section>
