edit resume link

--- a/myblog/templates/blog/about.html
+++ b/myblog/templates/blog/about.html
@@ -70,7 +70,7 @@
     <button class="btn-material"><span>Send to Mail</span></button></a>
   </div>
   <div class="contact-button" rippleria>
-    <a href="https://goo.gl/rWrVOu" class="newtab">
+    <a href="http://bit.ly/sujinlee-resume" class="newtab">
     <button class="btn-material download"><span>Download Resume</span></button></a>
   </div>
   </section>
