--- a/myblog/static/css/text.css
+++ b/myblog/static/css/text.css
@@ -1,3 +1,54 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+only delete 'ol' element 
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* text */
 html {
   -webkit-font-smoothing: antialiased;
   font-size: 16px;
@@ -41,6 +92,9 @@ body {
   }
 }
 
+
+
+
 /*
 title: Github Markdown Stylesheet
 author: Chris Patuzzo
@@ -65,7 +119,8 @@ a {
 }
 
 .markdown-body a:hover {
-  text-decoration: line-through;
+  background: #6200ea;
+  color: #fff;
 }
 
 a.absent {
@@ -459,7 +514,7 @@ pre code,pre tt {
 }
 
 /*
-Dracula Theme v1.2.0
+Customization Dracula Theme v1.2.0
 https://github.com/zenorocha/dracula-theme
 Copyright 2015, All rights reserved
 Code licensed under the MIT license
