--- a/myblog/static/src/css/text.css
+++ b/myblog/static/src/css/text.css
@@ -499,7 +499,7 @@ pre code {
 pre {
   background: #282a36;
   line-height: 1.7em;
-  font-size: 0.8em;
+  font-size: 0.9rem;
   overflow: auto;
   padding: 6px 10px;
   border-radius: 2px;
