--- a/myblog/templates/blog/index.html
+++ b/myblog/templates/blog/index.html
@@ -28,5 +28,4 @@
     <img class="svg index-icon" src="{% static 'image/svg-icons/close.svg' %}">
     <img class="svg index-icon" src="{% static 'image/svg-icons/music.svg' %}">
 </div>
-<script src="/static/js/index.js"></script>
-{% endblock content %}
+{% endblock %}
