--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -2,37 +2,51 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
-    <meta name="description" content="Personal Website">
+    <meta charset="UTF-8">
+    <meta name="description" content="Sujin Lee's Personal Website">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
-    <meta property="fb:app_id" content="1081681621896558" />
     <link rel="icon" type="image/png" href="{% static 'image/background/favicon_logo.png' %}">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     {% block title %}
     <title>Sujin Lee</title>
     {% endblock %}
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-    <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel='stylesheet' type='text/css'>
-    <link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
-    <link href='//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css' rel='stylesheet'>
-    <link href="{% static 'css/mdl-grid.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/text.css' %}" rel="stylesheet">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+
+    <!-- meta tags -->
     <meta property="fb:app_id" content="1081681621896558" />
     <meta property="og:site_name" content="Sujin Lee" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="ko" />
     <meta property="og:title" content="Sujin Lee" />
     <meta property="og:author" content="https://www.facebook.com/sujiniworld" />
+
     {% block ogtags %}
     <meta property="og:type" content="website" />
     <meta property="og:description" content="The connectivist" />
     <meta property="og:image"content="http://www.sujinlee.me/static/image/background/profile-about.png" />
     <meta property="og:url" content="http://sujinlee.me/" />
     {% endblock %}
+
+    <!-- fonts -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Share+Tech+Mono">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Space+Mono">
+    <link rel="stylesheet" href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css">
+
+    <!-- css -->
+    <link rel="stylesheet" href="{% static 'src/css/mdl-grid.css' %}">
+    <link rel="stylesheet" href="{% static 'src/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'src/css/text.css' %}">
+    
+    <!-- javascript -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="//unpkg.com/react@15/dist/react.min.js"></script>
+    <script src="//unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
   </head>
+
+  <!-- contents -->
   <body itemscope itemtype="http://schema.org/Product">
     <div id="wrapper">
       <header id ="header" class="nav-wrap">
@@ -45,7 +59,6 @@
             <div class="three"></div>
           </div>
         <div class="menu-section">
-          
           <nav>
             <ul role="navigation" class="hidden">
               <li><a class="" href="/" >HOME</a></li>
@@ -69,17 +82,27 @@
           <a href="http://www.instagram.com/sujinlee.me/"><i class="fa fa-instagram fa-2.0x"></i></a>
         </div>
         <div class="copyright">
-          <i class="fa fa-copyright"></i> SUJIN LEE
+          <i class="fa fa-copyright"></i>
+          SUJIN LEE
         </div>
       </footer>
     </div>
+
+
     {% block jsblock %}
+    <!-- disqus -->
     <script scr="//sujinlee.disqus.com/embed.js"></script>
     <script src="//sujinlee.disqus.com/count.js" id="dsq-count-scr" async></script>
-    <script src="{% static 'js/prefixfree.min.js' %}"></script>
-    <script src="{% static 'js/script.js' %}"></script>
-    <script src="{% static 'js/highlight.pack.js' %}"></script>
-    <script src="{% static 'js/social.js' %}"></script>
+
+    <!-- javascript -->
+    <!-- build:js -->
+    <script src="{% static 'dist/js/script.min.js' %}"></script>
+    <!--<script src="{% static 'src/js/prefixfree.min.js' %}"></script>
+    <script src="{% static 'src/js/script.js' %}"></script>
+    <script src="{% static 'src/js/highlight.pack.js' %}"></script>
+    <script src="{% static 'src/js/social.js' %}"></script>-->
+    <!-- endbuild -->
+
     <!--Code Syntax -->
     <script>hljs.initHighlightingOnLoad();</script>
     <!--Image Loading -->
@@ -89,6 +112,7 @@
       $img.parent().addClass('loaded');
       };
     </script>
+
     <!--google-analytics-->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -100,4 +124,5 @@
     </script>
     {% endblock %}
   </body>
+  <!-- end -->
 </html>
