--- a/myblog/templates/blog/post_list.html
+++ b/myblog/templates/blog/post_list.html
@@ -9,7 +9,7 @@
   <h1>{ BLOG }</h1>
   <h2>/* Now is better than Never */</h2>
 </section>
-<div class="">
+<div class="card-container">
   <div class="mdl-grid">
     <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
     <div class="mdl-cell mdl-cell--8-col  mdl-cell--12-col-tablet">
